Pricing: fixed width for mobile accordion, removed extra padding

--- a/components/_pricing.scss
+++ b/components/_pricing.scss
@@ -48,7 +48,7 @@
 		}
 		&.active {
 			background: #fff;
-			padding: 15px;
+			//padding: 15px;
 		}
 	}
 }
